moved to new index, rest works, saved settings
